--- a/guide/css/docsify-darklight-theme.css
+++ b/guide/css/docsify-darklight-theme.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Sans+Pro:300,400,600");
+@import url("https://fonts.googleapis.com/css?family=PT+Sans&Source+Sans+Pro&Roboto+Mono&display=swap");
 	* {
 	-webkit-font-smoothing:antialiased;
 	-webkit-overflow-scrolling:touch;
@@ -9,6 +9,21 @@
 }
 body:not(.ready) {
 	overflow:hidden
+}
+.search {
+	border-bottom:none!important
+}
+.search .input-wrap {
+	margin-top:20px!important
+}
+.search input {
+	border:1px solid var(--borderColor)!important;
+	background-color:var(--background)!important;
+	margin:0 auto;
+	color:var(--textColor);
+	width:90%!important;
+	border-radius:15px;
+	text-indent:15px
 }
 body:not(.ready) .app-nav,body:not(.ready)>nav,body:not(.ready) [data-cloak] {
 	display:none
@@ -27,7 +42,7 @@ div#app:empty:before {
 	vertical-align:middle
 }
 .progress {
-	background-color:var(--theme-color,#42b983);
+	background-color:var(--accent);
 	height:2px;
 	left:0;
 	position:fixed;
@@ -37,11 +52,10 @@ div#app:empty:before {
 	width:0;
 	z-index:999999
 }
-.search a:hover {
-	color:var(--theme-color,#42b983)
+.search .search-keyword,.search a:hover {
+	color:var(--accent)
 }
 .search .search-keyword {
-	color:var(--theme-color,#42b983);
 	font-style:normal;
 	font-weight:700
 }
@@ -51,12 +65,15 @@ body,html {
 body {
 	-moz-osx-font-smoothing:grayscale;
 	-webkit-font-smoothing:antialiased;
-	color:#34495e;
-	font-family:Source Sans Pro,Helvetica Neue,Arial,sans-serif;
-	font-size:15px;
+	color:var(--textColor);
+	font-family:var(--siteFont),Helvetica Neue,Arial,sans-serif;
+	font-size:var(--bodyFontSize);
 	letter-spacing:0;
 	margin:0;
 	overflow-x:hidden
+}
+.markdown-section h2 {
+	color:#fff
 }
 img {
 	max-width:100%
@@ -107,12 +124,11 @@ li input[type=checkbox] {
 	text-decoration:none;
 	transition:color .3s
 }
-.app-nav a:hover {
-	color:var(--theme-color,#42b983)
+.app-nav a.active,.app-nav a:hover {
+	color:var(--accent)
 }
 .app-nav a.active {
-	border-bottom:2px solid var(--theme-color,#42b983);
-	color:var(--theme-color,#42b983)
+	border-bottom:2px solid var(--accent)
 }
 .app-nav li {
 	display:inline-block;
@@ -170,9 +186,9 @@ li input[type=checkbox] {
 }
 .github-corner svg {
 	color:#fff;
-	fill:var(--theme-color,#42b983);
-	height:80px;
-	width:80px
+	fill:var(--accent);
+	height:70px;
+	width:70px
 }
 main {
 	display:block;
@@ -190,13 +206,13 @@ main.hidden {
 	transition:all .3s
 }
 .anchor span {
-	color:#34495e
+	color:var(--textColor)
 }
 .anchor:hover {
 	text-decoration:underline
 }
 .sidebar {
-	border-right:1px solid rgba(0,0,0,.07);
+	border-right:1px solid var(--borderColor);
 	overflow-y:auto;
 	padding:40px 0 0;
 	position:absolute;
@@ -261,7 +277,6 @@ main.hidden {
 }
 .sidebar-toggle {
 	background-color:transparent;
-	background-color:hsla(0,0%,100%,.8);
 	border:0;
 	outline:none;
 	padding:10px;
@@ -278,7 +293,7 @@ main.hidden {
 	opacity:.4
 }
 .sidebar-toggle span {
-	background-color:var(--theme-color,#42b983);
+	background-color:var(--accent);
 	display:block;
 	margin-bottom:4px;
 	width:16px;
@@ -298,7 +313,7 @@ body.sticky .sidebar,body.sticky .sidebar-toggle {
 }
 .markdown-section {
 	margin:0 auto;
-	max-width:80%;
+	max-width:90%;
 	padding:30px 15px 40px;
 	position:relative
 }
@@ -338,7 +353,6 @@ body.sticky .sidebar,body.sticky .sidebar-toggle {
 	border-top:1px solid #ccc
 }
 .markdown-section p.tip {
-	background-color:#f8f8f8;
 	border-bottom-right-radius:2px;
 	border-left:4px solid #f66;
 	border-top-right-radius:2px;
@@ -401,7 +415,6 @@ body.close .content {
 }
 main {
 	height:auto;
-	min-height:100vh;
 	overflow-x:hidden
 }
 .sidebar {
@@ -427,7 +440,6 @@ body.close .sidebar {
 	transform:translateX(300px)
 }
 body.close .sidebar-toggle {
-	background-color:hsla(0,0%,100%,.8);
 	transition:background-color 1s;
 	width:284px;
 	padding:10px
@@ -445,6 +457,22 @@ body.close .app-nav,body.close .github-corner {
 .github-corner .octo-arm {
 	-webkit-animation:octocat-wave .56s ease-in-out;
 	animation:octocat-wave .56s ease-in-out
+}
+#docsify-darklight-theme {
+	position:absolute;
+	left:10px;
+	top:15px;
+	width:25px;
+	height:25px;
+	background-repeat:no-repeat;
+	background-image:var(--toogleImage);
+	background-size:cover;
+	cursor:pointer;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	transition:background-image .15s ease-in-out .15s
 }
 }@-webkit-keyframes octocat-wave {
 	0%,to {
@@ -472,11 +500,11 @@ body.close .app-nav,body.close .github-corner {
 	background-repeat:no-repeat;
 	background-size:cover;
 	height:100vh;
-	width:100vw;
 	display:none
 }
 section.cover.show {
-	display:flex
+	display:flex;
+	background:var(--coverBackground)!important
 }
 section.cover.has-mask .mask {
 	background-color:#fff;
@@ -490,13 +518,12 @@ section.cover .cover-main {
 	flex:1;
 	margin:-20px 16px 0;
 	text-align:center;
-	position:relative
+	z-index:1
 }
 section.cover a {
-	color:inherit;
-	text-decoration:none
+	color:inherit
 }
-section.cover a:hover {
+section.cover a,section.cover a:hover {
 	text-decoration:none
 }
 section.cover p {
@@ -532,9 +559,9 @@ section.cover ul {
 }
 section.cover .cover-main>p:last-child a {
 	border-radius:2rem;
-	border:1px solid var(--theme-color,#42b983);
+	border:1px solid var(--accent);
 	box-sizing:border-box;
-	color:var(--theme-color,#42b983);
+	color:var(--accent);
 	display:inline-block;
 	font-size:1.05rem;
 	letter-spacing:.1rem;
@@ -544,7 +571,7 @@ section.cover .cover-main>p:last-child a {
 	transition:all .15s ease
 }
 section.cover .cover-main>p:last-child a:last-child {
-	background-color:var(--theme-color,#42b983);
+	background-color:var(--accent);
 	color:#fff
 }
 section.cover .cover-main>p:last-child a:last-child:hover {
@@ -555,23 +582,24 @@ section.cover .cover-main>p:last-child a:hover {
 	color:inherit
 }
 section.cover blockquote>p>a {
-	border-bottom:2px solid var(--theme-color,#42b983);
+	border-bottom:2px solid var(--accent);
 	transition:color .3s
 }
 section.cover blockquote>p>a:hover {
-	color:var(--theme-color,#42b983)
+	color:var(--accent)
 }
 .sidebar,body {
-	background-color:#fff
+	background-color:var(--background);
+	transition:background-image .15s ease-in-out .15s
 }
 .sidebar {
-	color:#364149
+	color:var(--textColor)
 }
 .sidebar li {
 	margin:6px 0
 }
 .sidebar ul li a {
-	color:#505d6b;
+	color:var(--sidebarSublink);
 	font-size:14px;
 	font-weight:400;
 	overflow:hidden;
@@ -587,7 +615,7 @@ section.cover blockquote>p>a:hover {
 }
 .sidebar ul li.active>a {
 	border-right:2px solid;
-	color:var(--theme-color,#42b983);
+	color:var(--accent);
 	font-weight:600
 }
 .app-sub-sidebar li:before {
@@ -596,12 +624,13 @@ section.cover blockquote>p>a:hover {
 	float:left
 }
 .markdown-section h1,.markdown-section h2,.markdown-section h3,.markdown-section h4,.markdown-section strong {
-	color:#2c3e50;
+	color:var(--textColor);
 	font-weight:600
 }
 .markdown-section a {
-	color:var(--theme-color,#42b983);
-	font-weight:600
+	color:var(--accent);
+	font-weight:600;
+	text-decoration:none
 }
 .markdown-section h1 {
 	font-size:2rem;
@@ -636,8 +665,8 @@ section.cover blockquote>p>a:hover {
 	padding-left:1.5rem
 }
 .markdown-section blockquote {
-	border-left:4px solid var(--theme-color,#42b983);
-	color:#858585;
+	border-left:4px solid var(--accent);
+	color:var(--blockQuoteColor);
 	margin:2em 0;
 	padding-left:20px
 }
@@ -651,77 +680,28 @@ section.cover blockquote>p>a:hover {
 .markdown-section em {
 	color:#7f8c8d
 }
-.markdown-section code,.markdown-section output:after,.markdown-section pre {
-	font-family:Roboto Mono,Monaco,courier,monospace
-}
-.markdown-section code,.markdown-section pre {
-	background-color:#f8f8f8
-}
-.markdown-section output,.markdown-section pre {
-	margin:1.2em 0;
-	position:relative
-}
-.markdown-section output,.markdown-section pre>code {
-	border-radius:2px;
-	display:block
-}
-.markdown-section output:after,.markdown-section pre>code {
-	-moz-osx-font-smoothing:initial;
-	-webkit-font-smoothing:initial
-}
 .markdown-section code {
 	border-radius:2px;
-	color:#e96900;
+	color:var(--highlightColor);
+	font-size:.9rem;
 	margin:0 2px;
 	padding:3px 5px;
-	white-space:pre-wrap
+	white-space:pre-wrap;
+	font-weight:700
 }
-.markdown-section>:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) code {
-	font-size:.8rem
+.markdown-section code,.markdown-section pre {
+	background-color:var(--codeBackgroundColor);
+	font-family:var(--codeFontFamily)
 }
 .markdown-section pre {
-	padding:0 1.4rem;
+	-moz-osx-font-smoothing:initial;
+	-webkit-font-smoothing:initial;
 	line-height:1.5rem;
+	margin:1.2em 0;
 	overflow:auto;
+	padding:0 1.4rem;
+	position:relative;
 	word-wrap:normal
-}
-.markdown-section pre>code {
-	color:#525252;
-	font-size:.8rem;
-	padding:2.2em 5px;
-	line-height:inherit;
-	margin:0 2px;
-	max-width:inherit;
-	overflow:inherit;
-	white-space:inherit
-}
-.markdown-section output {
-	padding:1.7rem 1.4rem;
-	border:1px dotted #ccc
-}
-.markdown-section output>:first-child {
-	margin-top:0
-}
-.markdown-section output>:last-child {
-	margin-bottom:0
-}
-.markdown-section code:after,.markdown-section code:before,.markdown-section output:after,.markdown-section output:before {
-	letter-spacing:.05rem
-}
-.markdown-section output:after,.markdown-section pre:after {
-	color:#ccc;
-	font-size:.6rem;
-	font-weight:600;
-	height:15px;
-	line-height:15px;
-	padding:5px 10px 0;
-	position:absolute;
-	right:0;
-	text-align:right;
-	top:0
-}
-.markdown-section output:after,.markdown-section pre:after {
-	content:attr(data-lang)
 }
 .token.cdata,.token.comment,.token.doctype,.token.prolog {
 	color:#8e908c
@@ -742,7 +722,7 @@ section.cover blockquote>p>a:hover {
 	color:#2973b7
 }
 .token.string {
-	color:var(--theme-color,#42b983)
+	color:var(--accent)
 }
 .token.selector {
 	color:#6679cc
@@ -754,7 +734,7 @@ section.cover blockquote>p>a:hover {
 	color:#22a2c9
 }
 .token.attr-value,.token.control,.token.directive,.token.unit {
-	color:var(--theme-color,#42b983)
+	color:var(--accent)
 }
 .token.function,.token.keyword {
 	color:#e96900
@@ -784,10 +764,61 @@ section.cover blockquote>p>a:hover {
 .token.entity {
 	cursor:help
 }
+.markdown-section pre>code {
+	-moz-osx-font-smoothing:initial;
+	-webkit-font-smoothing:initial;
+	background-color:var(--codeBackgroundColor);
+	border-radius:2px;
+	color:var(--codeTextColor);
+	display:block;
+	font-family:Roboto Mono,Monaco,courier,monospace;
+	font-size:.8rem;
+	line-height:inherit;
+	margin:0 2px;
+	max-width:inherit;
+	overflow:inherit;
+	padding:2.2em 5px;
+	white-space:inherit
+}
+.markdown-section code:after,.markdown-section code:before {
+	letter-spacing:.05rem
+}
 code .token {
 	-moz-osx-font-smoothing:initial;
 	-webkit-font-smoothing:initial;
 	min-height:1.5rem;
 	position:relative;
 	left:auto
+}
+pre:after {
+	color:var(--codeTypeColor);
+	content:attr(data-lang);
+	font-size:.6rem;
+	font-weight:600;
+	height:15px;
+	line-height:15px;
+	padding:5px 10px 0;
+	position:absolute;
+	right:0;
+	text-align:right;
+	top:0
+}
+#docsify-darklight-theme {
+	position:absolute;
+	right:10px;
+	top:15px;
+	width:25px;
+	height:25px;
+	background-repeat:no-repeat;
+	background-image:var(--toogleImage);
+	background-size:cover;
+	cursor:pointer;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	transition:background-image .15s ease-in-out .15s
+}
+#docsify-darklight-theme p {
+	visibility:hidden
 }
